autotools: check for AC_INIT() in configure

If we come across a file that looks like it might be autotools, first
check to see if it has AC_INIT() defined in the file. That way we aren't
fooled by wrapper scripts and dummy files.

https://bugzilla.gnome.org/show_bug.cgi?id=791293